--- a/server/views/review/licenceDetails.pug
+++ b/server/views/review/licenceDetails.pug
@@ -4,6 +4,11 @@ block content
 
     include ../includes/backToTaskList
 
+    if Object.keys(errorObject).length !== 0
+        div.error-summary(role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1")
+            h2.heading-medium.error-summary-heading.center.noMargin#error-summary-heading-example-1
+                | There are unanswered questions - see below
+
     include includes/licenceSummary
 
     div.paddingBottom.smallPaddingTop
