--- a/server/views/review/includes/additionalConditions.pug
+++ b/server/views/review/includes/additionalConditions.pug
@@ -25,7 +25,9 @@ mixin additionalConditions(editable)
                         if item.text
                             | #{item.text}
                         if item.variable
-                            span(class=item.variable.includes('INPUT REQUIRED') ? "bold alert" : "bold") #{item.variable}
+                            span.bold #{item.variable}
+                        if item.error
+                            span.bold.alert [#{item.error}]
 
             if allowEdit
                 div.pure-u-2-24
