--- a/server/views/review/includes/additionalConditions.pug
+++ b/server/views/review/includes/additionalConditions.pug
@@ -15,7 +15,7 @@ mixin additionalConditions(editable)
                         if condition.group === 'Bespoke'
                             |  -
                             span.approved
-                                if condition.approved == 'Yes'
+                                if condition.approved === 'Yes'
                                     |  Approved
                                 else
                                     span.alert  Not approved
@@ -27,7 +27,7 @@ mixin additionalConditions(editable)
                         if item.variable
                             span.bold #{item.variable}
                         if item.error
-                            span.bold.alert [#{item.error}]
+                            span.bold.alert #{item.error}
 
             if allowEdit
                 div.pure-u-2-24
