--- a/server/views/review/includes/itemAndError.pug
+++ b/server/views/review/includes/itemAndError.pug
@@ -2,4 +2,4 @@ mixin itemAndError(field, errorField, id, oneLine)
     if field
         span(id=`${id}` class=oneLine ? "bold" : "block bold") #{field}
     if errorField
-            span.alert.bold(id=`${id}-error`) #{errorField}
+            span(id=`${id}-error` class=oneLine ? "bold alert" : "alert block bold") #{errorField}
