--- a/server/views/taskList/prisonerDetails.pug
+++ b/server/views/taskList/prisonerDetails.pug
@@ -1,3 +1,5 @@
+- var sentenceDetail = prisonerInfo.sentenceDetail || {}
+
 h2.heading-medium Offender details
 
 div#personalDetails.pure-g.borderBottom.paddingBottom
@@ -46,27 +48,27 @@ div#personalDetails.pure-g.borderBottom.paddingBottom
     div.pure-u-1.pure-u-md-5-24
         div.midMarginBottom
             | Conditional Release Date
-            if (prisonerInfo.conditionalReleaseDate)
-                span#prisonerCrd.block.bold  #{prisonerInfo.conditionalReleaseDate}
+            if (sentenceDetail.conditionalReleaseDate)
+                span#prisonerCrd.block.bold  #{sentenceDetail.conditionalReleaseDate}
 
         div.midMarginBottom
             | HDC Eligibility Date
-            if (prisonerInfo.homeDetentionCurfewEligibilityDate)
-                span#prisonerHdced.block.bold  #{prisonerInfo.homeDetentionCurfewEligibilityDate}
+            if (sentenceDetail.homeDetentionCurfewEligibilityDate)
+                span#prisonerHdced.block.bold  #{sentenceDetail.homeDetentionCurfewEligibilityDate}
 
-        if (prisonerInfo.sentenceExpiryDate && prisonerInfo.sentenceExpiryDate !== 'Invalid date')
+        if (sentenceDetail.sentenceExpiryDate && sentenceDetail.sentenceExpiryDate !== 'Invalid date')
             div.midMarginBottom
                 | Sentence Expiry Date
-                span#prisonerSed.block.bold  #{prisonerInfo.sentenceExpiryDate}
+                span#prisonerSed.block.bold  #{sentenceDetail.sentenceExpiryDate}
 
-        if (prisonerInfo.licenceExpiryDate && prisonerInfo.licenceExpiryDate !== 'Invalid date')
+        if (sentenceDetail.licenceExpiryDate && sentenceDetail.licenceExpiryDate !== 'Invalid date')
             div.midMarginBottom
                 | Licence Expiry Date
-                span#prisonerLed.block.bold  #{prisonerInfo.licenceExpiryDate}
+                span#prisonerLed.block.bold  #{sentenceDetail.licenceExpiryDate}
 
-        if (prisonerInfo.topupSupervisionExpiryDate && prisonerInfo.topupSupervisionExpiryDate !== 'Invalid date')
+        if (sentenceDetail.topupSupervisionExpiryDate && sentenceDetail.topupSupervisionExpiryDate !== 'Invalid date')
             div.midMarginBottom
                 | Post Sentence Supervision Expiry Date
-                span#prisonerPssed.block.bold  #{prisonerInfo.topupSupervisionExpiryDate}
+                span#prisonerPssed.block.bold  #{sentenceDetail.topupSupervisionExpiryDate}
 
 
