removed ref from exclusion reason

--- a/server/views/eligibility/includes/excluded.pug
+++ b/server/views/eligibility/includes/excluded.pug
@@ -22,7 +22,7 @@ block excludedForm
                     |  Community Order
             div.multiple-choice
                 input(type='checkbox' name='reason' id='returnedAtRisk' value='returnedAtRisk' checked=vals.indexOf('returnedAtRisk') !== -1)
-                label(for='returnedAtRisk') Offender returned to custody during at risk period (Ref. P25 PSI Annex C)
+                label(for='returnedAtRisk') Offender returned to custody during at risk period
         div.pure-u-4-24
         div.pure-u-10-24
             div.multiple-choice
