Tweak layout to be consistent with feature specs

--- a/server/views/taskList/postponementTask.pug
+++ b/server/views/taskList/postponementTask.pug
@@ -27,15 +27,15 @@ div.largeMarginBottom.borderTop
                     input#postponed(type="hidden" name="decision" value="Yes")
                     input#continueBtn.taskListAction.center.button.button-secondary(type="submit" value="Postpone")
 
-    div.pure-g.borderBottomLight.midPaddingTopBottom
-        div.pure-u-1-2
-            if licenceStatus.decisions.refused
-                span.alert.bold HDC refused
+div.pure-g.borderBottomLight.midPaddingBottom
+    div.pure-u-1-2
+        if licenceStatus.decisions.refused
+            span.alert.bold HDC refused
 
-        div.pure-u-1-4
-        div.pure-u-1-4
-            a.taskListAction.center.button.button-secondary(href="/hdc/finalChecks/refuse/" + prisonerInfo.offenderNo)
-                if licenceStatus.decisions.refused
-                    | Update refusal
-                else
-                    | Refuse HDC
+    div.pure-u-1-4
+    div.pure-u-1-4
+        a.taskListAction.center.button.button-secondary(href="/hdc/finalChecks/refuse/" + prisonerInfo.offenderNo)
+            if licenceStatus.decisions.refused
+                | Update refusal
+            else
+                | Refuse HDC
