Extract common back link

--- a/server/views/eligibility/excluded.pug
+++ b/server/views/eligibility/excluded.pug
@@ -5,8 +5,7 @@ block content
     - var exclusionValue = data.decision || null;
 
     div.pure-g.pure-u-1
-        div.back-link-container.smallPaddingTop
-            a.link-back(href="javascript: window.history.back();") Back
+        include ../includes/back
 
         div.pure-u-1-2
             h2.heading-large Is the offender statutorily excluded from HDC?
