--- a/server/views/proposedAddress/optOut.pug
+++ b/server/views/proposedAddress/optOut.pug
@@ -3,8 +3,7 @@ extends ../layout
 block content
 
     div.pure-g.pure-u-1
-        div.back-link-container.smallPaddingTop
-            a.link-back(href="javascript: window.history.back();") Back
+        include ../includes/back
 
         div.pure-u-1-2
             h2.heading-large Has the offender decided to opt out of the HDC process?
