--- a/server/views/eligibility/crdTime.pug
+++ b/server/views/eligibility/crdTime.pug
@@ -5,8 +5,7 @@ block content
     - var crdTimeValue = data ? data.decision : null;
 
     div.pure-g.pure-u-1
-        div.back-link-container.smallPaddingTop
-            a.link-back(href="javascript: window.history.back();") Back
+        include ../includes/back
 
         div.pure-u-1-2
             h2.heading-large Are there less than 4 weeks until the offender's conditional release date?
