--- a/server/views/licenceConditions/additionalConditions.pug
+++ b/server/views/licenceConditions/additionalConditions.pug
@@ -9,8 +9,7 @@ block content
                     |Not all required information was submitted correctly
                 p Please correct the form where indicated below
 
-    div.back-link-container.smallPaddingTop
-        a.link-back(href="javascript: window.history.back();") Back
+    include ../includes/back
 
     h1.heading-large Additional conditions
 
