--- a/server/views/licenceConditions/conditionsSummary.pug
+++ b/server/views/licenceConditions/conditionsSummary.pug
@@ -3,8 +3,7 @@ extends ../layout
 include ../review/includes/additionalConditions
 block content
 
-    div.back-link-container.smallPaddingTop
-        a.link-back(href="javascript: window.history.back();") Back
+    include ../includes/back
 
     div.largePaddingBottom
         if data.licenceConditions && data.licenceConditions.length > 0
