--- a/server/views/proposedAddress/confirmAddress.pug
+++ b/server/views/proposedAddress/confirmAddress.pug
@@ -6,8 +6,7 @@ block content
     -var address = data || null
 
     div.pure-g.pure-u-1
-        div.back-link-container.smallPaddingTop
-            a.link-back(href="javascript: window.history.back();") Back
+        include ../includes/back
 
         h2.heading-large.paddingBottom Confirm address details
 
