--- a/server/views/proposedAddress/curfewAddress.pug
+++ b/server/views/proposedAddress/curfewAddress.pug
@@ -4,8 +4,7 @@ block content
     -var savedAddress = data || {}
 
     div.pure-g.pure-u-1.borderBottom
-        div.back-link-container.smallPaddingTop
-            a.link-back(href="javascript: window.history.back();") Back
+        include ../includes/back
 
         h2.heading-large Proposed curfew address
 
