--- a/server/views/review/licence.pug
+++ b/server/views/review/licence.pug
@@ -2,8 +2,7 @@ extends ../layout
 
 block content
 
-    div.back-link-container.smallPaddingTop
-        a.link-back(href="javascript: window.history.back();") Back
+    include ../includes/back
 
     include includes/licenceSummary
 
