--- a/server/views/send/index.pug
+++ b/server/views/send/index.pug
@@ -4,8 +4,7 @@ block content
 
     div.pure-g
         div.pure-u-1
-            div.back-link-container.smallPaddingTop
-                a.link-back(href="javascript: window.history.back();") Back
+            include ../includes/back
 
     div.largePaddingBottom
         if user.role == 'CA'
