--- a/server/views/login.pug
+++ b/server/views/login.pug
@@ -1,8 +1,14 @@
 extends layout
 
 block content
+    if errors.length > 0
+        div.error-summary(role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1")
+            h2.heading-medium.error-summary-heading.center.noMargin#error-summary-heading-example-1
+                | #{errors[0]}
+
     div.pure-g
         div.pure-u-1-3
+
             form(action='/login', method='POST', class='form')
                 input(type="hidden" name="_csrf" value=csrfToken)
                 h1(class='form-title heading-large') Sign in
