--- a/server/views/proposedAddress/includes/addressForm.pug
+++ b/server/views/proposedAddress/includes/addressForm.pug
@@ -31,7 +31,7 @@ mixin addressForm(index, alternative)
                     input.form-control(id="occupierName-"+index name=addressPosition+"[occupier][name]" value=savedOccupier.name)
 
                 div.form-group.pure-u-1.pure-u-sm-10-24.padLeftRight15
-                    label.form-label(for="occupierRelation-"+index) Relation to prisoner
+                    label.form-label(for="occupierRelation-"+index) Relation to offender
                     input.form-control(id="occupierRelation-"+index name=addressPosition+"[occupier][relationship]" value=savedOccupier.relationship)
 
                 div.form-group.pure-u-1.pure-u-sm-4-24
