--- a/server/views/taskList/finalChecksTask.pug
+++ b/server/views/taskList/finalChecksTask.pug
@@ -7,14 +7,14 @@ div.taskListItem.smallPaddingBottom
                 div.padLeftRight15
                     ul
                         if licenceStatus.decisions.seriousOffence
-                            li.list-bullet.alert#seriousOffenceAnswer The prisoner is under investigation or been charged for a serious offence in custody
+                            li.list-bullet.alert#seriousOffenceAnswer The offender is under investigation or been charged for a serious offence in custody
                         else
-                            li.list-bullet#seriousOffenceAnswer The prisoner is not under investigation or been charged for a serious offence in custody
+                            li.list-bullet#seriousOffenceAnswer The offender is not under investigation or been charged for a serious offence in custody
 
                         if licenceStatus.decisions.onRemand
-                            li.list-bullet.alert#onRemandAnswer The prisoner is on remand
+                            li.list-bullet.alert#onRemandAnswer The offender is on remand
                         else
-                            li.list-bullet#onRemandAnswer The prisoner is not on remand
+                            li.list-bullet#onRemandAnswer The offender is not on remand
             else
                 | Not yet complete
         div.pure-u-1-4
