LIC-368: Update working of serious offence question

--- a/server/views/taskList/finalChecksTask.pug
+++ b/server/views/taskList/finalChecksTask.pug
@@ -7,7 +7,7 @@ div.taskListItem.smallPaddingBottom
                 div.padLeftRight15
                     ul
                         if licenceStatus.decisions.seriousOffence
-                            li.list-bullet.alert#seriousOffenceAnswer The offender is under investigation or been charged for a serious offence in custody
+                            li.list-bullet.alert#seriousOffenceAnswer The offender has been referred to the police or other law enforcement agency or to the independent adjudicator (IA) in relation to an alleged offence committed during the current sentence and the matter remains unresolved
                         else
                             li.list-bullet#seriousOffenceAnswer The offender is not under investigation or been charged for a serious offence in custody
 
