--- a/server/views/review/includes/riskManagement.pug
+++ b/server/views/review/includes/riskManagement.pug
@@ -11,6 +11,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-g
             div.pure-u-2-3
                 +itemAndError(risk.planningActions, errors.planningActions, "planningActions")
+                +itemAndError('', errors.planningActionsDetails && 'Details not entered', "planningActionsDetails")
             div.pure-u-1-3.alignRight
                 if (stage === 'PROCESSING_RO'  && user.role === 'RO')
                     a#riskEditLink(href="/hdc/risk/riskManagement/" + nomisId) Change these details
@@ -22,6 +23,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
                 span Are you still waiting for information to inform risk management planning?
     div.pure-u-1-2
         +itemAndError(risk.awaitingInformation, errors.awaitingInformation, "awaitingInformation")
+        +itemAndError('', errors.awaitingInformationDetails && 'Details not entered', "awaitingInformationDetails")
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
@@ -30,3 +32,4 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
                 span Is this a Victim Contact Service qualifying case where the victim has opted in?
     div.pure-u-1-2
         +itemAndError(risk.victimLiaison, errors.victimLiaison, "victimLiaison")
+        +itemAndError('', errors.victimLiaisonDetails && 'Details not entered', "victimLiaisonDetails")
