--- a/server/views/eligibility/excluded.pug
+++ b/server/views/eligibility/excluded.pug
@@ -7,6 +7,11 @@ block content
     div.pure-g.pure-u-1
         include ../includes/back
 
+        if Object.keys(errorObject).length !== 0
+            div.error-summary(role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1")
+                h2.heading-medium.error-summary-heading.center.noMargin#error-summary-heading-example-1
+                    | There are errors with your submission - see below
+
         div.pure-u-1-2
             h2.heading-large Is the offender statutorily excluded from HDC?
 
@@ -24,7 +29,7 @@ block content
                         input#excludedNo(type="radio" checked=exclusionValue === 'No' name="decision" value="No")
                         label(for="excludedNo") No
 
-                div#excludedForm.panel.panel-border-narrow.js-hidden
+                div#excludedForm(class=errorObject.reason ? 'form-group-error': 'panel panel-border-narrow js-hidden')
                     include includes/excluded
 
             div.paddingBottom.smallPaddingTop
