added error messsage to main exclusion question

--- a/server/views/eligibility/excluded.pug
+++ b/server/views/eligibility/excluded.pug
@@ -15,6 +15,8 @@ block content
         div.pure-u-1-2
             h2.heading-large Is the offender statutorily excluded from HDC?
 
+    if errorObject.decision
+        p.error-message Please select an answer
     form(method="post")
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="nomisId" value=nomisId || '')
